Replace md-messagebox with webpack-md-messagebox.

--- a/demo/package.json
+++ b/demo/package.json
@@ -13,9 +13,9 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.14.0",
     "json-loader": "^0.5.4",
-    "md-messagebox": "../",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-md-messagebox": "../"
   }
 }
